# polymarket

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: architecture.md
examples/: portfolio_example.py  portfolio_polymarket_example.py
journal/: 20260105_001.md  20260106_001.md
src/polymarket_bot/: __init__.py  config.py  main.py
src/polymarket_bot/api/: __init__.py  client.py
src/polymarket_bot/portfolio/: README.md  __init__.py  database.py  models.py  service.py
src/polymarket_bot/strategies/: base.py  example.py
src/polymarket_bot/tasks/: celery_app.py  trading_tasks.py
src/polymarket_bot/utils/: logging.py
tests/: __init__.py  test_config.py  test_portfolio.py
